import '@testing-library/jest-dom'
import { rest }         from 'msw'
import { DndProvider }  from 'react-dnd'
import { HTML5Backend } from 'react-dnd-html5-backend'
import { act }          from 'react-dom/test-utils'

import { ApDeviceStatusEnum, CommonUrlsInfo, FloorPlanDto, NetworkDeviceType, SwitchStatusEnum } from '@acx-ui/rc/utils'
import { Provider }                                                                              from '@acx-ui/store'
import { fireEvent, mockServer, render, screen, waitForElementToBeRemoved }                      from '@acx-ui/test-utils'

import { FloorPlan, sortByFloorNumber } from '.'


const list: FloorPlanDto[] = [
  {
    id: '94bed28abef24175ab58a3800d01e24a',
    image: {
      id: '01acff37331949c686d40b5a00822ec2-001.jpeg',
      name: '8.jpeg'
    },
    name: 'TEST_2',
    floorNumber: 0,
    imageId: '01acff37331949c686d40b5a00822ec2-001.jpeg',
    imageName: '8.jpeg',
    imageUrl:
    '/api/file/tenant/fe892a451d7a486bbb3aee929d2dfcd1/01acff37331949c686d40b5a00822ec2-001.jpeg'
  },
  {
    id: '01abc6a927e6445dba33c52fce9b4c3d',
    image: {
      id: '7231da344778480d88f37f0cca1c534f-001.png',
      name: 'download.png'
    },
    name: 'dscx',
    floorNumber: 2,
    imageId: '7231da344778480d88f37f0cca1c534f-001.png',
    imageName: 'download.png',
    imageUrl:
    '/api/file/tenant/fe892a451d7a486bbb3aee929d2dfcd1/7231da344778480d88f37f0cca1c534f-001.png'
  }]

const deviceData = {
  fields: [
    // eslint-disable-next-line max-len
    'serialNumber','xPercent','yPercent','switchName','name','rogueCategory','apMac','id','floorplanId','deviceStatus'],
  totalCount: 5,
  page: 1,
  data: [
    {
      ap: [{
        deviceStatus: ApDeviceStatusEnum.NEVER_CONTACTED_CLOUD,
        floorplanId: '94bed28abef24175ab58a3800d01e24a',
        id: '302002015732',
        name: '3 02002015736',
        serialNumber: '302002015732',
        xPercent: 65.20548,
        yPercent: 9.839357,
        networkDeviceType: NetworkDeviceType.ap
      }],
      switches: [{
        deviceStatus: SwitchStatusEnum.NEVER_CONTACTED_CLOUD,
        floorplanId: '94bed28abef24175ab58a3800d01e24a',
        id: 'FEK3224R72N',
        name: 'FEK3224R232N',
        serialNumber: 'FEK3224R72N',
        xPercent: 52.739727,
        yPercent: 7.056452,
        networkDeviceType: NetworkDeviceType.switch
      }],
      LTEAP: [],
      RogueAP: [],
      cloudpath: [],
      DP: []
    }
  ]
}
describe('Floor Plans', () => {
  let params: { tenantId: string, venueId: string }
  beforeEach(() => {
    mockServer.use(
      rest.get(
        CommonUrlsInfo.getVenueFloorplans.url,
        (req, res, ctx) => res(ctx.json(list))
      ),
      rest.delete(
        CommonUrlsInfo.deleteFloorPlan.url,
        (req, res, ctx) => res(ctx.json({ requestId: '' }))
      ),
      rest.put(
        CommonUrlsInfo.updateFloorplan.url,
        (req, res, ctx) => res(ctx.json({}))
      ),
      rest.post(
        CommonUrlsInfo.getAllDevices.url,
        (req, res, ctx) => res(ctx.json(deviceData))
      )
    )
    params = {
      tenantId: 'fe892a451d7a486bbb3aee929d2dfcd1',
      venueId: '7231da344778480d88f37f0cca1c534f'
    }
  })
  it('Floor Plans should render correctly', async () => {

    const { asFragment } = await render(<Provider><DndProvider backend={HTML5Backend}><FloorPlan />
    </DndProvider></Provider>, {
      route: { params, path: '/:tenantId/venue/:venueId/floor-plan' }
    })

    expect(screen.getByRole('img', { name: 'loader' })).toBeVisible()
    await waitForElementToBeRemoved(screen.queryByRole('img', { name: 'loader' }))

    const plainViewImage = await screen.findAllByTestId('floorPlanImage')
    const thumbnailImages = screen.getAllByTestId('thumbnailBg')
    await expect(plainViewImage).toHaveLength(1)
    expect(thumbnailImages).toHaveLength(list.length)
    await screen.findByText('+ Add Floor Plan')

    fireEvent.click(screen.getByRole('button', { name: /Delete/i }))
    await screen.findByText('Are you sure you want to delete this Floor Plan?')

    fireEvent.click(screen.getByRole('button', { name: /Edit/i }))
    await screen.findByText('Edit Floor Plan')

    const editForm: HTMLFormElement = await screen.findByTestId('floor-plan-form')
    await act(() => {
      editForm.submit()
    })

    const deleteFloorplanButton = await screen.findByText('Delete Floor Plan')
    fireEvent.click(deleteFloorplanButton)

    fireEvent.click(await screen.findByTestId('ApplicationsSolid'))
    expect(plainViewImage[0]).not.toBeInTheDocument()
    expect(thumbnailImages[0]).not.toBeInTheDocument()

    expect(asFragment()).toMatchSnapshot()
  })

  it('Floor Plans should render gallery correctly', async () => {

    const { asFragment } = await render(<Provider><DndProvider backend={HTML5Backend}><FloorPlan />
    </DndProvider></Provider>, {
      route: { params, path: '/:tenantId/venue/:venueId/floor-plan' }
    })

    expect(screen.getByRole('img', { name: 'loader' })).toBeVisible()
    await waitForElementToBeRemoved(screen.queryByRole('img', { name: 'loader' }))

    const plainViewImage = await screen.findAllByTestId('floorPlanImage')
    const thumbnailImages = screen.getAllByTestId('thumbnailBg')
    await expect(plainViewImage).toHaveLength(1)
    expect(thumbnailImages).toHaveLength(list.length)

    fireEvent.click(await screen.findByTestId('ApplicationsSolid'))
    expect(plainViewImage[0]).not.toBeInTheDocument()
    expect(thumbnailImages[0]).not.toBeInTheDocument()
    const fpImage = await screen.findAllByTestId('fpImage')
    expect(fpImage[0]).toBeVisible()

    fireEvent.click(await fpImage[0])
    expect(fpImage[0]).not.toBeVisible()

    expect(asFragment()).toMatchSnapshot()
  })
  it('test sortByFloorNumber function', async () => {
    expect(sortByFloorNumber(list[1], list[0])).toEqual(1)
    expect(sortByFloorNumber(list[0], list[1])).toEqual(-1)
    expect(sortByFloorNumber(list[0], { ...list[1], floorNumber: 0 })).toEqual(0)
  })

})
